--- a/kashiken.html
+++ b/kashiken.html
@@ -121,46 +121,46 @@
         </div>
     </div>
     <footer class="wrap-footer">
-        <div>
-            <ul class="box">
+        <div class="list-footer">
+            <ul class="section-footer">
                 <a href="https://www.gongcha.co.jp/menu/" class="listlink-footer">メニュー</a>
-                <li class="notdot">
+                <li>
                     <a href="https://www.gongcha.co.jp/menu/#allergy" class="sublink-footer">栄養情報</a>
                 </li>
-                <li class="notdot">
+                <li>
                     <a href="https://www.gongcha.co.jp/menu/#energy" class="sublink-footer">アレルギー・カフェイン情報</a>
                 </li>
             </ul>
-            <ul class="box">
+            <ul class="section-footer">
                 <a href="https://www.gongcha.co.jp/store/" class="listlink-footer">店舗</a>
-                <li class="notdot">
+                <li>
                     <a href="https://www.gongcha.co.jp/store/" class="sublink-footer">店舗案内</a>
                 </li>
-                <li class="notdot">
+                <li>
                     <a href="https://www.gongcha.co.jp/new-store/" class="sublink-footer">新店舗情報</a>
                 </li>
             </ul>
-            <ul class="box">
+            <ul class="section-footer">
                <a href="https://www.gongcha.co.jp/about/" class="listlink-footer">ゴンチャについて</a>
-               <li class="notdot">
+               <li>
                    <a href="https://www.gongcha.co.jp/about/tea/" class="sublink-footer">茶葉について</a>
                </li>
            </ul>
-           <ul class="box">
+           <ul class="section-footer hurantyaizu">
                <a href="https://gongcha-fc.net/jobfind-pc/" class="listlink-footer">フランチャイズ加盟をお考えの方へ</a>
            </ul>
-           <ul class="box">
+           <ul class="section-footer">
                <a href="https://gongcha-job.net/jobfind-pc/" class="listlink-footer">求人情報</a>
            </ul>
-           <ul class="box">
+           <ul class="section-footer">
                <a href="https://www.gongcha.co.jp/company/" class="listlink-footer">企業情報</a>
-               <li class="notdot">
+               <li>
                    <a href="https://www.gongcha.co.jp/company/press-release/" class="sublink-footer">プレスリリース</a>
                </li>
-               <li class="notdot">
+               <li>
                    <a href="https://www.gongcha.co.jp/category/news/" class="sublink-footer">ニュース</a>
                </li>
-               <li class="notdot">
+               <li>
                    <a href="https://www.gongcha.co.jp/contact/" class="sublink-footer">お問い合わせ</a>
                </li>
            </ul>
@@ -179,8 +179,7 @@
         </ul>
         <div class="copy-footer">
             <p class="copy-footer-text">Copyright (C) 2020 Gong cha Japan. All Rights Reserved.</p>
-        </div>
-        </div>    
+        </div>   
     </footer>
     <script src="kashiken.js"></script>
 </body>
