--- a/kashiken.html
+++ b/kashiken.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+
+    <!--------------------- header --------------------->
     <header>
         <div class="site-header-in">
             <div class="site-header-conts">
