レスポンシブ完成(仮)

--- a/kashiken.html
+++ b/kashiken.html
@@ -190,48 +190,65 @@
 </main>
     <footer class="wrap-footer">
         <div class="list-footer">
-            <ul class="section-footer">
-                <a href="https://www.gongcha.co.jp/menu/" class="listlink-footer">メニュー</a>
-                <li>
-                    <a href="https://www.gongcha.co.jp/menu/#allergy" class="sublink-footer">栄養情報</a>
-                </li>
-                <li>
-                    <a href="https://www.gongcha.co.jp/menu/#energy" class="sublink-footer">アレルギー・カフェイン情報</a>
-                </li>
-            </ul>
-            <ul class="section-footer">
-                <a href="https://www.gongcha.co.jp/store/" class="listlink-footer">店舗</a>
-                <li>
-                    <a href="https://www.gongcha.co.jp/store/" class="sublink-footer">店舗案内</a>
-                </li>
-                <li>
-                    <a href="https://www.gongcha.co.jp/new-store/" class="sublink-footer">新店舗情報</a>
-                </li>
-            </ul>
-            <ul class="section-footer">
-                <a href="https://www.gongcha.co.jp/about/" class="listlink-footer">ゴンチャについて</a>
-                <li>
-                    <a href="https://www.gongcha.co.jp/about/tea/" class="sublink-footer">茶葉について</a>
-                </li>
-            </ul>
-            <ul class="section-footer hurantyaizu">
-                <a href="https://gongcha-fc.net/jobfind-pc/" class="listlink-footer">フランチャイズ加盟をお考えの方へ</a>
-            </ul>
-            <ul class="section-footer">
-                <a href="https://gongcha-job.net/jobfind-pc/" class="listlink-footer">求人情報</a>
-            </ul>
-            <ul class="section-footer">
-                <a href="https://www.gongcha.co.jp/company/" class="listlink-footer">企業情報</a>
-                <li>
-                    <a href="https://www.gongcha.co.jp/company/press-release/" class="sublink-footer">プレスリリース</a>
-                </li>
-                <li>
-                    <a href="https://www.gongcha.co.jp/category/news/" class="sublink-footer">ニュース</a>
-                </li>
-                <li>
-                    <a href="https://www.gongcha.co.jp/contact/" class="sublink-footer">お問い合わせ</a>
-                </li>
-            </ul>
+            <div class="footer-list-1">
+                <div class="footer-list footer-list--1">
+                    <ul class="section-footer">
+                        <a href="https://www.gongcha.co.jp/menu/" class="listlink-footer">メニュー</a>
+                        <li>
+                            <a href="https://www.gongcha.co.jp/menu/#allergy" class="sublink-footer">栄養情報</a>
+                        </li>
+                        <li>
+                            <a href="https://www.gongcha.co.jp/menu/#energy" class="sublink-footer">アレルギー・カフェイン情報</a>
+                        </li>
+                    </ul>
+                    <ul class="section-footer">
+                        <a href="https://www.gongcha.co.jp/store/" class="listlink-footer">店舗</a>
+                        <li>
+                            <a href="https://www.gongcha.co.jp/store/" class="sublink-footer">店舗案内</a>
+                        </li>
+                        <li>
+                            <a href="https://www.gongcha.co.jp/new-store/" class="sublink-footer">新店舗情報</a>
+                        </li>
+                    </ul>
+                    <ul class="section-footer pc-hide">
+                        <a href="https://gongcha-fc.net/jobfind-pc/" class="listlink-footer">フランチャイズ加盟をお考えの方へ</a>
+                    </ul>
+                </div>
+                <div class="footer-list footer-list--2 sp-hide">
+                    <ul class="section-footer odd">
+                        <a href="https://www.gongcha.co.jp/about/" class="listlink-footer">ゴンチャについて</a>
+                        <li>
+                            <a href="https://www.gongcha.co.jp/about/tea/" class="sublink-footer">茶葉について</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-list footer-list--3">
+                <ul class="section-footer pc-hide">
+                    <a href="https://www.gongcha.co.jp/about/" class="listlink-footer">ゴンチャについて</a>
+                    <li>
+                        <a href="https://www.gongcha.co.jp/about/tea/" class="sublink-footer">茶葉について</a>
+                    </li>
+                </ul>
+                <ul class="section-footer hurantyaizu sp-hide">
+                    <a href="https://gongcha-fc.net/jobfind-pc/" class="listlink-footer">フランチャイズ加盟をお考えの方へ</a>
+                </ul>
+                <ul class="section-footer">
+                    <a href="https://gongcha-job.net/jobfind-pc/" class="listlink-footer">求人情報</a>
+                </ul>
+                <ul class="section-footer">
+                    <a href="https://www.gongcha.co.jp/company/" class="listlink-footer">企業情報</a>
+                    <li>
+                        <a href="https://www.gongcha.co.jp/company/press-release/" class="sublink-footer">プレスリリース</a>
+                    </li>
+                    <li>
+                        <a href="https://www.gongcha.co.jp/category/news/" class="sublink-footer">ニュース</a>
+                    </li>
+                    <li>
+                        <a href="https://www.gongcha.co.jp/contact/" class="sublink-footer">お問い合わせ</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="logo-footer">
             <img src="./img/footerlogo.png" alt="Gongchaicon">
